Add create category endpoint
